# HalAndroidAudio

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/myaudiohalproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/myaudiohalproject/: IEqualizerService.aidl
app/src/main/cpp/: CMakeLists.txt  audio_hal.cpp  native-lib.cpp
app/src/main/java/: EqualizerService.kt
app/src/main/java/com/example/myaudiohalproject/: CanMessage.kt  MainActivity.kt  VehicleCanBusSimulator.kt  VehicleSensorSimulator.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myaudiohalproject/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
